refactor: list all types