@@ -5,6 +5,7 @@ import jakarta.enterprise.context.ApplicationScoped;
 import org.puzre.adapter.repository.entity.TypeEntity;
 import org.puzre.core.domain.Type;
 import org.puzre.core.exception.TypeNotFoundException;
+import org.puzre.core.port.mapper.repository.IEntityToDomainMapper;
 import org.puzre.core.port.repository.ITypeRepository;
 
 import java.util.List;
@@ -13,11 +14,19 @@ import java.util.stream.Collectors;
 @ApplicationScoped
 public class TypeRepository implements PanacheRepository<TypeEntity>, ITypeRepository {
 
+    private final IEntityToDomainMapper<TypeEntity, Type> iTypeEntityToDomainMapper;
+
+    public TypeRepository(
+            IEntityToDomainMapper<TypeEntity, Type> iTypeEntityToDomainMapper
+    ) {
+        this.iTypeEntityToDomainMapper = iTypeEntityToDomainMapper;
+    }
+
     @Override
     public List<Type> listAllTypes() {
         return this.listAll().stream()
-                .map(TypeEntity::toType)
-                .collect(Collectors.toList());
+                .map(iTypeEntityToDomainMapper::toDomain)
+                .toList();
     }
 
     @Override
